Project_1/image_1/Service_1.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: ns1
spec:
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
